objects/UNITY_Service_Contract_Line_Item__c.object
<CustomObject>
    <description>Unity project, service contract line items will capture labor and part pricing related to a specific service contract for a vendor or customer.</description>
    <fields>
        <fullName>Asset_Type__c</fullName>
        <label>Asset Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Asset_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITYPM_Additional_PM_Rate__c</fullName>
        <description>Rate used if there are more than 1 Asset Type in Order Item</description>
        <label>Additional PM Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Cost_Plus__c</fullName>
        <label>Cost Plus %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>UNITY_Currency__c</fullName>
        <description>Currency to be used</description>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>United States $</fullName>
                </value>
                <value>
                    <fullName>Canada $</fullName>
                </value>
                <value>
                    <fullName>Mexico Peso</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Exclude__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Exclude?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Holiday_Multiplier__c</fullName>
        <description>Holiday Multiplier by Trade</description>
        <label>Holiday Labor Multiplier</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Holiday_Travel_Multiplier__c</fullName>
        <label>Holiday Travel Multiplier</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Inclusion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inclusion?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Is_Preferred_Part__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates Preferred Parts for the Customer Account. If rates not available, pull data from Pricebook</description>
        <label>Is Preferred Part ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Labor_Cost__c</fullName>
        <description>Labor Rate</description>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Labor_Hours__c</fullName>
        <description>Contains minimum Labor Hours value required to complete the task</description>
        <label>Labor Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_OT_Multiplier__c</fullName>
        <description>Overtime Multiplier</description>
        <label>OT Labor Multiplier</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_OT_Travel_Multiplier__c</fullName>
        <label>OT Travel Multiplier</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>2 Hour Response</fullName>
                </value>
                <value>
                    <fullName>4 Hour Response</fullName>
                </value>
                <value>
                    <fullName>12 Hour Response</fullName>
                </value>
                <value>
                    <fullName>24 Hour Response</fullName>
                </value>
                <value>
                    <fullName>48 Hour Response</fullName>
                </value>
                <value>
                    <fullName>72 Hour Response</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product information</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Service Contract Line Items</relationshipLabel>
        <relationshipName>Service_Contract_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UNITY_Resources__c</fullName>
        <description>Number of resources required to complete the job</description>
        <label>Number of Resources</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Self_Perform_Labor_Cost__c</fullName>
        <label>Self-Perform Labor Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Self_Perform_Trip_Charge_Cost__c</fullName>
        <label>Self-Perform Trip Charge Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Self_Perform_Trip_Charge_Type__c</fullName>
        <label>Self-Perform Trip Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat Fee</fullName>
                </value>
                <value>
                    <fullName>Hourly Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Service_Charge_Amount__c</fullName>
        <label>Service Charge/Fee Amount</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Service_Charge_Percentage__c</fullName>
        <label>Service Charge/Fee Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>UNITY_Service_Charge__c</fullName>
        <label>Service Charge</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>UNITY_Service_Contract__c</fullName>
        <description>Unity project, master detail relationship between Service Contract and its line items</description>
        <label>Service Contract</label>
        <referenceTo>UNITY_Service_Contract__c</referenceTo>
        <relationshipLabel>Service Contract Line Items</relationshipLabel>
        <relationshipName>UNITY_Service_Contract_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>UNITY_Tax__c</fullName>
        <description>Holds Tax information</description>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>UNITY_Threshold_End__c</fullName>
        <label>Threshold End</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Threshold_Start__c</fullName>
        <label>Threshold Start</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Total_Cost__c</fullName>
        <formula>(UNITY_Labor_Cost__c * UNITY_Labor_Hours__c* UNITY_Resources__c ) +  UNTIY_Material_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Trade__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trade</label>
        <referenceTo>FSO__Skill__c</referenceTo>
        <relationshipLabel>Service Contract Line Items</relationshipLabel>
        <relationshipName>Service_Contract_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UNITY_Trip_Charge_Type__c</fullName>
        <description>Type of Trip Charge By Trade</description>
        <label>Trip Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat Fee</fullName>
                </value>
                <value>
                    <fullName>Hourly Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Trip_Charge__c</fullName>
        <description>Trip Charge by Trade</description>
        <label>Trip Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNTIY_Material_Cost__c</fullName>
        <description>Product Cost</description>
        <label>Product Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unity_NTE__c</fullName>
        <description>Not to Exceed cost</description>
        <inlineHelpText>NTE that will be used if no NTE is specified on trade</inlineHelpText>
        <label>NTE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unity_Service_Contract_Line_Item_Ext_Id__c</fullName>
        <description>Will Contain Unique Record Id from source</description>
        <externalId>true</externalId>
        <label>Service Contract Line Item Ext Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Service Contract Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SCL-{0000}</displayFormat>
        <label>Service Contract Line Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Contract Line Items</pluralLabel>
    <recordTypes>
        <fullName>UNITYPM_Asset_Type_Rate</fullName>
        <active>true</active>
        <label>Asset Type Rate</label>
    </recordTypes>
    <recordTypes>
        <fullName>UNITYPM_PM_Product</fullName>
        <active>true</active>
        <label>PM Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>UNITY_Hourly_Rate</fullName>
        <active>true</active>
        <description>NTE, Labor, Travel, OT rates and multipliers per trade.</description>
        <label>Hourly Rate</label>
    </recordTypes>
    <recordTypes>
        <fullName>UNITY_Menu_Pricing</fullName>
        <active>true</active>
        <label>Menu Pricing</label>
    </recordTypes>
    <recordTypes>
        <fullName>UNITY_NTE</fullName>
        <active>true</active>
        <description>Specify NTE by Trade and Priority</description>
        <label>NTE</label>
    </recordTypes>
    <recordTypes>
        <fullName>UNITY_Product_Pricing</fullName>
        <active>true</active>
        <description>Cost of product and any associated labor</description>
        <label>Product Pricing</label>
    </recordTypes>
    <recordTypes>
        <fullName>UNITY_Product_Pricing_Rule</fullName>
        <active>true</active>
        <label>Product Pricing Rule</label>
    </recordTypes>
    <recordTypes>
        <fullName>UNITY_Service_Charge</fullName>
        <active>true</active>
        <label>Service Charge/Service Fee</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>